1.5/_sources/modules/generated/sklearn.covariance.EllipticEnvelope.rst.txt
EllipticEnvelope
================

.. currentmodule:: sklearn.covariance

.. autoclass:: EllipticEnvelope
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.covariance.EllipticEnvelope sklearn.covariance.EllipticEnvelope.__init__ sklearn.covariance.EllipticEnvelope.correct_covariance sklearn.covariance.EllipticEnvelope.decision_function sklearn.covariance.EllipticEnvelope.error_norm sklearn.covariance.EllipticEnvelope.fit sklearn.covariance.EllipticEnvelope.fit_predict sklearn.covariance.EllipticEnvelope.get_metadata_routing sklearn.covariance.EllipticEnvelope.get_params sklearn.covariance.EllipticEnvelope.get_precision sklearn.covariance.EllipticEnvelope.mahalanobis sklearn.covariance.EllipticEnvelope.predict sklearn.covariance.EllipticEnvelope.reweight_covariance sklearn.covariance.EllipticEnvelope.score sklearn.covariance.EllipticEnvelope.score_samples sklearn.covariance.EllipticEnvelope.set_params sklearn.covariance.EllipticEnvelope.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -