1.7/_sources/modules/generated/sklearn.covariance.EllipticEnvelope.rst.txt
EllipticEnvelope
================

.. currentmodule:: sklearn.covariance

.. autoclass:: EllipticEnvelope
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.covariance.EllipticEnvelope sklearn.covariance.EllipticEnvelope.__delattr__ sklearn.covariance.EllipticEnvelope.__dir__ sklearn.covariance.EllipticEnvelope.__eq__ sklearn.covariance.EllipticEnvelope.__format__ sklearn.covariance.EllipticEnvelope.__ge__ sklearn.covariance.EllipticEnvelope.__getattribute__ sklearn.covariance.EllipticEnvelope.__getstate__ sklearn.covariance.EllipticEnvelope.__gt__ sklearn.covariance.EllipticEnvelope.__hash__ sklearn.covariance.EllipticEnvelope.__init__ sklearn.covariance.EllipticEnvelope.__init_subclass__ sklearn.covariance.EllipticEnvelope.__le__ sklearn.covariance.EllipticEnvelope.__lt__ sklearn.covariance.EllipticEnvelope.__ne__ sklearn.covariance.EllipticEnvelope.__new__ sklearn.covariance.EllipticEnvelope.__reduce__ sklearn.covariance.EllipticEnvelope.__reduce_ex__ sklearn.covariance.EllipticEnvelope.__repr__ sklearn.covariance.EllipticEnvelope.__setattr__ sklearn.covariance.EllipticEnvelope.__setstate__ sklearn.covariance.EllipticEnvelope.__sizeof__ sklearn.covariance.EllipticEnvelope.__sklearn_clone__ sklearn.covariance.EllipticEnvelope.__sklearn_tags__ sklearn.covariance.EllipticEnvelope.__str__ sklearn.covariance.EllipticEnvelope.__subclasshook__ sklearn.covariance.EllipticEnvelope._build_request_for_signature sklearn.covariance.EllipticEnvelope._get_default_requests sklearn.covariance.EllipticEnvelope._get_doc_link sklearn.covariance.EllipticEnvelope._get_metadata_request sklearn.covariance.EllipticEnvelope._get_param_names sklearn.covariance.EllipticEnvelope._get_params_html sklearn.covariance.EllipticEnvelope._html_repr sklearn.covariance.EllipticEnvelope._nonrobust_covariance sklearn.covariance.EllipticEnvelope._repr_html_inner sklearn.covariance.EllipticEnvelope._repr_mimebundle_ sklearn.covariance.EllipticEnvelope._set_covariance sklearn.covariance.EllipticEnvelope._validate_params sklearn.covariance.EllipticEnvelope.correct_covariance sklearn.covariance.EllipticEnvelope.decision_function sklearn.covariance.EllipticEnvelope.error_norm sklearn.covariance.EllipticEnvelope.fit sklearn.covariance.EllipticEnvelope.fit_predict sklearn.covariance.EllipticEnvelope.get_metadata_routing sklearn.covariance.EllipticEnvelope.get_params sklearn.covariance.EllipticEnvelope.get_precision sklearn.covariance.EllipticEnvelope.mahalanobis sklearn.covariance.EllipticEnvelope.predict sklearn.covariance.EllipticEnvelope.reweight_covariance sklearn.covariance.EllipticEnvelope.score sklearn.covariance.EllipticEnvelope.score_samples sklearn.covariance.EllipticEnvelope.set_params 
   :add-heading: Gallery examples
   :heading-level: -